<resources>
    <!-- App name -->
    <string name="swd">Student   Welfare   Division</string>
    <string name="app_name">SWD</string>

    <!--User_Login Screen start -->
    <string name="login">Login</string>
    <string name="ID">User ID</string>
    <string name="pwd">Password</string>
    <string name="forgot_pwd">Forgot password</string>
    <string name="admin">Admin Side</string>
    <string name="contact">Contact us</string>
    <string name="login_admin">Administration Login</string>
    <!--User_Login screen end -->

    <!--Forgot Password-->
    <string name="BitsMail">\@hyderabad.bits-pilani.ac.in</string>
    <string name="TextForgotPassword">Fill in your BITS email ID and check your email for the password reset link.</string>
    <string name="passwordRecovery">PASSWORD RECOVERY</string>
    <string name="resetForgot_pass">Reset</string>
    <string name="RESET_URL">http://swd.bits-hyderabad.ac.in/passmail.php</string>

    <!--User nav menu start-->
    <string name="home">Home</string>
    <string name="connect">Connect</string>
    <string name="notices">Notices</string>
    <string name="chronicles">Chronicles</string>
    <string name="complaint">Complaint</string>
    <string name="feed">Feed</string>
    <string name="mess">Mess</string>
    <string name="messReg">Mess Registration</string>
    <string name="docs">Documents</string>
    <string name="uploads">Uploads</string>
    <string name="logout">Logout</string>
    <string name="title_activity_nav">Nav</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="goodies">Goodies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SWD Office</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--User nav menu end-->

    <!--Admin nav menu start-->
    <string name="title_activity_admin__nav">Admin_Nav</string>
    <string name="admin_nav_search">Search</string>
    <string name="admin_nav_doc">Document Generation</string>
    <string name="admin_nav_mess">Mess Balance</string>
    <string name="admin_nav_goodies">Goodies</string>
    <string name="admin_nav_gate">Main Gate</string>
    <string name="admin_nav_alumni">Alumni</string>
    <string name="admin_nav_mcn">MCN</string>
    <string name="admin_nav_details">Details</string>
    <string name="admin_nav_disco">Disciplinary Committee</string>
    <string name="admin_nav_migration">Migration</string>
    <string name="admin_nav_counselor">Counselor</string>
    <!--Admin  nav menu end-->

    <!--Admin search spinner start-->
    <string-array name="admin_search_spinner">

        <item name="search_default">Please select</item>
        <item name="search_name">Name</item>
        <item name="search_id">ID Number</item>
        <item name="search_room">Room Number</item>
        <item name="search_gender">Gender(M/F)</item>
        <item name="search_date">Date(YYYY-MM-DD)</item>
        <item name="search_city">City</item>
        <item name="search_state">State</item>
        <item name="search_blood">Blood Group</item>
        <item name="search_nation">Nationality</item>

    </string-array>
    <!--Admin search spinner end-->

    <!--Admin search start-->
    <string name="admin_criteria">Criteria: </string>
    <string name="admin_string">Search String: </string>
    <!--Admin search end-->

    <!--Admin Doc start-->
    <string name="admin_doc">Document Generation</string>
    <string name="admin_doc_id">Enter ID: </string>
    <string name="admin_doc_bonafide">Bonafide</string>
    <string name="admin_doc_noc">NOC</string>
    <string name="admin_doc_character">Good Character</string>
    <string name="admin_doc_vacation">Vacation Letter</string>
    <string name="admin_doc_fee_estimate">Fee Estimate</string>
    <string name="admin_doc_duplicate">New ID</string>
    <string name="admin_doc_duplicate_compre">New ID (compre)</string>
    <string name="admin_doc_fee_receipt_2">Fee Receipt(II)</string>
    <string name="admin_doc_fee_receipt_1">Fee Receipt(I)</string>
    <string name="admin_doc_submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="toolbar_title">Student Welfare Division</string>
    <string name="connect_title">Connect</string>
    <string name="notices_title">Notices</string>
    <string name="complaints_title">Complaint</string>
    <string name="mess_title">Mess</string>
    <string name="messReg_title">Mess Registration</string>
    <string name="busTimings">212 Bus Timings</string>
    <string name="docs_title">Documents</string>
    <string name="uploads_title">Uploads</string>
    <string name="goodies_title">Goodies</string>
    <string name="goo">goo</string>
    <!--Admin Doc End-->

    <!--profile activity-->
    <string name="field_name">Name</string>
    <string name="field_room_no">Room number</string>
    <string name="field_phone_no">Phone number</string>
    <string name="field_Id_no">ID number</string>
    <string name="field_DOB">Date of birth</string>
    <string name="field_gender">Gender</string>
    <string name="field_nationality">Nationality</string>
    <string name="field_per_mail">Personal email</string>
    <string name="field_blood_group">Blood group</string>
    <string name="field_address">Address</string>
    <string name="field_city">City/Town</string>
    <string name="field_state">State</string>
    <string name="field_ac_no">Bank account number</string>
    <string name="field_bank_name">Bank name</string>
    <string name="field_ifsc">IFSC code</string>
    <string name="field_fname">Father\'s name</string>
    <string name="field_fphone">Father\'s phone number</string>
    <string name="field_femail">Father\'s email</string>
    <string name="field_foccupation">Father\'s occupation</string>
    <string name="field_mname">Mother\'s name</string>
    <string name="field_mphone">Mother\'s phone number</string>
    <string name="field_memail">Mother\'s email</string>
    <string name="field_moccupation">Mother\'s occupation</string>
    <string name="GRACE_URL">http://swd.bits-hyderabad.ac.in/messgrace1.php</string>
    <string name="URL">http://swd.bits-hyderabad.ac.in/</string>
    <string name="BASE_URL">http://swd.bits-hyderabad.ac.in/swd_app/</string>
    <string name="DOCS_URL">http://swd.bits-hyderabad.ac.in/swd_app/gen_appDocs.php</string>
    <string name="quantityofGoodies">Quantity</string>

    <!--Order goodies-->
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="goodieImageUrl">swd.bits-hyderabad.ac.in/goodies/img/</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="xxxl">XXXL</string>
    <string name="qty">Quantity</string>
    <string name="null_hint"></string>
    <string name="custom_name">Custom Name</string>
    <string name="custom_name_hint">This will be printed on the item</string>
    <string name="minamt_fraiser">Minimum :</string>
    <string name="maxamt_fraiser">Maximum :</string>
    <string name="cbAgree_text">I agree to pay the above amount from my Other Advances account</string>
    <string name="order_button">Order</string>
    <string name="order_cost">Total Cost:</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="library_opac">Library OPAC</string>


    <string name="TD_URL">https://td.bits-hyderabad.ac.in/</string>
    <string name="ERP_URL">https://erp.bits-pilani.ac.in/</string>
    <string name="OPAC_URL">http://libraryopac.bits-hyderabad.ac.in/</string>


    <string name="busTimeBits_to_Sec">\u2022 06:55\n\u2022 07:55\n\u2022 08:50\n\u2022 09:20\n\u2022 09:50\n\u2022 11:00\n\u2022 12:00\n\u2022 13:00\n\u2022 14:00\n\u2022 15:05\n\u2022 16:05\n\u2022 17:20\n\u2022 18:15\n\u2022 19:15\n\u2022 20:15</string>
    <string name="busTimeSec_to_Bits">\u2022 07:50\n\u2022 08:20\n\u2022 08:50\n\u2022 09:50\n\u2022 11:00\n\u2022 12:00\n\u2022 13:00\n\u2022 14:10\n\u2022 15:05\n\u2022 16:05\n\u2022 17:20\n\u2022 18:15\n\u2022 19:15\n\u2022 20:15\n\u2022 21:15</string>


    <string name="doc_Bonafide">Bonafide Certificate</string>
    <string name="doc_NOC">No Objection Certificate</string>
    <string name="doc_GoodChar">Good Character Certificate</string>
    <string name="doc_Medical">Medical Insurance Claim Form</string>
    <string name="doc_Vacation">Vacation Letter</string>
    <string name="_212_bus_timings">212 Bus Timings</string>


    <string name="doc_address">Birla Institute of Technology &#38; Science, Pilani\n Hyderabad Campus,Jawahar Nagar, Kapra Mandal\n Medchal District - 500078, Telangana, India</string>
    <string name="doc_contact">Tel: +91 40 6630 3820/821\nFax: +91 40 6630 3998\nEmail: swd-enquiry@hyderabad.bits-pilani.ac.in</string>
    <string name="dean">Prof. Sandip S. Deshmukh</string>
    <string name="post">Associate Dean</string>
    <string name="download_msg">File will be downloaded to SWD Documents folder in your device</string>
    <string name="download_prepMsg">Loading... Please wait</string>
    <string name="MessURL">http://swd.bits-hyderabad.ac.in/mess/</string>
    <string name="MessRegURL">http://swd.bits-hyderabad.ac.in/messreg</string>
    <string name="field_aadhar">Aadhar number</string>
    <string name="field_pan">PAN card number</string>
    <string name="field_category">Category</string>
    <string name="field_fcomp">Father\'s company</string>
    <string name="field_fdesg">Father\'s designation</string>
    <string name="field_mcomp">Mother\'s company</string>
    <string name="field_mdesg">Mother\'s designation</string>
    <string name="field_med_history">Medical history</string>
    <string name="field_current_med">Current medications</string>
    <string name="DeductionsTitle">Deductions</string>
    <string name="personal_details">Personal details</string>
    <string name="parents_details">Parents\' details</string>
    <string name="medical_details">Medical details</string>
    <string name="bank_account_details">Bank account details</string>
    <string name="contact_us">Contact us</string>
    <string name="important_links">Important links</string>
    <string name="timetable_division">Timetable division</string>
    <string name="erp">ERP</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="view_deductions">View deductions</string>
    <string name="spent_this_semester">spent this semester</string>
    <string name="logging_you_in">Logging you in</string>
    <string name="servers_no_connection">We\'re unable to connect to our servers right now\nPlease try again later</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>

    <string name="amount">Amount</string>
    <string name="mess_reg_instructions">Select which mess you want to register to</string>
    <string name="mess_reg_closed">Mess registration is closed right now</string>
    <string name="bits_to_secunderabad">BITS to Secunderabad</string>
    <string name="secunderabad_to_bits">Secunderabad to BITS</string>
    <string name="view_timings">View timings</string>
    <string name="bus_212">Bus 212</string>
    <string name="get_documents">Get documents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">More</string>

</resources>
