<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/connect"
            android:icon="@drawable/ic_forum"
            android:title="@string/connect" />
        <item
            android:id="@+id/notices"
            android:icon="@drawable/ic_assignment"
            android:title="@string/notices" />

        <item
            android:id="@+id/complaint"
            android:icon="@drawable/ic_feedback"
            android:title="@string/complaint" />

        <item
            android:id="@+id/mess"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/mess" />

        <item
            android:id="@+id/goodies"
            android:icon="@drawable/ic_feedback"
            android:title="@string/goodies" />
        <item
            android:id="@+id/docs"
            android:icon="@drawable/ic_subject"
            android:title="@string/docs" />
        <item
            android:id="@+id/uploads"
            android:icon="@drawable/ic_up"
            android:title="@string/uploads" />

    </group>

</menu>