<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/admin_doc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/login_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_doc_id" />

        <EditText
            style="@style/login_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="f20XXXXX" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/top"
        android:weightSum="3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                style="@style/button_admin_doc"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/admin_doc_bonafide" />

            <Button
                style="@style/button_admin_doc"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/admin_doc_noc" />

            <Button
                style="@style/button_admin_doc"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/admin_doc_character" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/top"
        android:weightSum="3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="3">

            <Button
                style="@style/button_admin_doc"

                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/admin_doc_vacation" />

            <Button
                style="@style/button_admin_doc"

                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/admin_doc_fee_estimate" />

            <Button
                style="@style/button_admin_doc"

                android:layout_width="110dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/admin_doc_duplicate" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="@dimen/top"
        android:weightSum="3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                style="@style/button_admin_doc"

                android:layout_width="110dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/admin_doc_duplicate_compre" />

            <Button
                style="@style/button_admin_doc"

                android:layout_width="110dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/admin_doc_fee_receipt_2" />

            <Button
                style="@style/button_admin_doc"
                android:layout_width="110dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/admin_doc_fee_receipt_1" />
        </TableRow>
    </TableLayout>
</LinearLayout>