<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".user.activity.User_Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/acad"
            style="@style/background_img"
            android:src="@drawable/acad"
            android:tint="#4F000000" />

        <ImageView
            android:id="@+id/logo"
            android:layout_marginTop="54dp"
            style="@style/logo"
            android:src="@drawable/logo" />

        <TextView
            style="@style/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:text="@string/swd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                app:boxStrokeColor="@color/whiteText"
                app:hintTextColor="@color/whiteText"
                android:hint="@string/ID"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_fill"
                    android:layout_width="match_parent"
                    android:background="@drawable/loginfields"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwd_textinputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/whiteText"
                android:layout_marginTop="15dp"
                app:boxStrokeColor="@color/whiteText"
                android:hint="@string/pwd"
                app:hintTextColor="@color/whiteText"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwd_fill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/loginfields"
                    android:inputType="textPassword"
                    android:textColor="@color/whiteText" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginTop="15dp"
                android:layout_marginRight="@dimen/right"
                android:orientation="vertical">


                <Button
                    android:id="@+id/submit"
                    style="@style/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/login_forgot_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:text="@string/forgot_pwd"
                        android:textColor="@color/whiteText" />

                    <TextView
                        android:id="@+id/fabContactUsfromLoginPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:layout_weight="1"
                        android:text="@string/contact"
                        android:textColor="@color/whiteText" />
                </LinearLayout>
                <!--<TextView
                android:id="@+id/login_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF" />
                -->

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>