<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".user.activity.ForgotPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/acad"
        android:tint="#7F000000"
        style="@style/background_img"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swd"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/whiteText"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="25dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/semiTransparentColor50"
        android:layout_marginRight="25dp"
        app:cardElevation="0dp"
        android:layout_marginLeft="25dp">

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordRecovery"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/whiteText"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:layout_margin="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/TextForgotPassword"
                android:textColor="@color/whiteText"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_margin="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/etUsernameForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="15dp"
                    android:padding="10dp"
                    android:background="@drawable/edit_text"
                    android:layout_marginLeft="15dp"
                    android:hint="f201XXXXX"
                    android:textColor="@color/whiteText"
                    android:textColorHint="@color/semiTransparentColor80"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/BitsMail"
                    android:textColor="@color/whiteText"
                    android:textSize="14sp" />

            </LinearLayout>



            <Button
                android:id="@+id/btnForgotSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submitForgot_pass"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                style="@style/button_login"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>